@@ -34,7 +34,6 @@ setup(
         "Natural Language :: English",
         "License :: OSI Approved :: Apache Software License",
         "Programming Language :: Python",
-        "Programming Language :: Python :: 2.7",
         "Programming Language :: Python :: 3",
         "Programming Language :: Python :: 3.8",
     ],
@@ -42,9 +41,9 @@ setup(
     #
     install_requires=[
         "numpy",
-        "rcsb.utils.io >= 0.48",
-        "rcsb.db >= 0.946",
-        "rcsb.utils.chemref >= 0.30",
+        "rcsb.utils.io >= 0.49",
+        "rcsb.db >= 0.950",
+        "rcsb.utils.chemref >= 0.31",
         "rcsb.utils.citation >= 0.13",
         "rcsb.utils.config >= 0.25",
         "rcsb.utils.seq >= 0.32",
