@@ -25,3 +25,4 @@
 04-Jan-2020 V0.33 Add support for rcsb_polymer_entity.rcsb_enzyme_class_combined_depth
 09-Jan-2020 V0.34 Add additional cache test criteria for UniProt match cache.
 10-Jan-2020 V0.35 Update dependencies for rcsb.utils.go and rcsb.utils.struct
+23-Jan-2020 V0.36 Changes to support pre-beta-v1 schema reorganization with the addition of rcsb_polymer_entity_annotation
